# mdr_serial_programmer

./: CMakeLists.txt  main.cpp  maindirector.cpp  maindirector.h  mdr_serial_programmer_ru_RU.ts
src/: abstracthardwareinterface.h  argparser.cpp  argparser.h  main.cpp  maindirector.cpp  maindirector.h  serial_settings.h  settings.cpp  settings.h
